2006-08-20  Juan Pablo Ugarte <juanpablougarte@gmail.com>

	* index.html: Updated with new Glade 3.0.1 release.

2006-08-12  Tristan Van Berkom  <tvb@gnome.org>

	* index.html, download.html, todo.html, apps.html, screenshots.html,
	  lists.html, history.html, docs/*, graphics/*:
	  Updated with new Glade 3.0 release, added screenshots, added glade core
	  library documentation, made some other minor changes.
	
2006-05-13  Tristan Van Berkom  <tvb@gnome.org>

	* todo.html: Updated status & planning of Glade-3, linked in the
	  api docs.

2005-10-03  Tristan Van Berkom  <tvb@gnome.org>
	
	* todo.html: Adjusted information regarding Glade 3, notably; added
	  a reference to the GNOME download directory.

2005-04-28  Damon Chaplin  <damon@gnome.org>

	* apps.html: fixed gPowershot url.

2005-03-26  Damon Chaplin  <damon@gnome.org>

	* apps.html: added gPowershot.

2005-03-25  Damon Chaplin  <damon@gnome.org>

	* *.html: new website design from Joao Victor.

2005-01-07  Damon Chaplin  <damon@gnome.org>

	* apps.html: moved xcave from Glade 1 to Glade 2 section.

2004-12-21  Damon Chaplin  <damon@gnome.org>

	* history.html: 
	* index.html: 
	* download.html: added info on 2.6.8 release.

	* apps.html: added keyTouch.

2004-12-14  Damon Chaplin  <damon@gnome.org>

	* history.html: 
	* index.html: 
	* download.html: added info on releases up to 2.6.7.

	* apps.html: added Warehouse Manager.

2004-12-02  Damon Chaplin  <damon@gnome.org>

	* apps.html: added configure-trackpoint.

	* glade-2.0.dtd: updated to new version from libglade.

2004-07-24  Damon Chaplin  <damon@gnome.org>

	* apps.html: added gFLAMEd.

2004-07-12  Damon Chaplin  <damon@gnome.org>

	* apps.html: added RealmForge GDK.

	* index.html: 
	* download.html: 
	* history.html: added 2.6.0 info.

2004-04-14  Damon Chaplin  <damon@gnome.org>

	* links.html: checked all the links and tidied up.

	* lists.html: removed references to glade-announce. We don't use it
	any more.
