@@ -83,6 +83,54 @@ Objective Caml and Scheme. Adding support for other languages is easy too.
   <tbody>
     <tr>
       <td></td>
+      <td style="vertical-align: top;"><b>Sep 29 2006</b></td>
+      <td></td>
+      <td><b>Glade 3.0.2 </b><b> released !</b><b><br />
+      </b>
+      <p>Get it at <a href="http://ftp.gnome.org/pub/GNOME/sources/glade3/3.0/">
+http://ftp.gnome.org/pub/GNOME/sources/glade3/3.0/</a>.<br />
+      </p>
+      <p>This is a bugfix release to 3.0 and it fixed the known crashers and most
+of the more critical problems in 3.0.1
+ </p>
+      <p>New features and fixes:</p>
+      <ul>
+        <li>Fixed some properties to be translatable (reported by Olivier Rolland)</li>
+	<li>Now use non-locale specific functions to write out double values to
+glade files, revert to use floating precision in adjustments.</li>
+        <li>Signal editor UI improved (bug 127149) (Juan Pablo Ugarte)</li>
+	<li>Reimplemented file drag and drop (bug 352458) (Vincent Geddes)</li>
+	<li>Fixed accelerator dialog segfaults (bug 352825) (Juan Pablo Ugarte)</li>
+	<li>Improved GtkPaned support (bug 345075) (Juan Pablo Ugarte)</li>
+	<li>Backing out multiple consecutive pastes (reopening bug 345603)
+(this fixes menu editor segfaults among other things)</li>
+        <li>Fixed ComboBoxEntry crash (bug 354716) (Juan Pablo Ugarte)</li>
+	<li>Ordering of properties in the editor window 
+(bug 345893) (Juan Pablo Ugarte)</li>
+        <li>Allow a dynamic user-editable comment prepended to the 
+glade file (Bug 342889) (Juan Pablo Ugarte)</li>
+        <li>Added new stock listing that includes the stock "images" (which
+are not gtk+ stock "items"), and enabled them for GtkImage and GtkToolItem. (bug 353522)</li>
+        <li>GtkImage now defaults to an initial "gtk-broken-image" stock type.</li>
+	<li>Ignore "enable-grid-lines" 2.10 property on treeview since it causes 
+crashes on load (fixes bug 353611)</li>
+        <li>Added displayable values for "enable-grid-lines" 2.10 property</li>
+	<li>Set some HIG-ish defaults on dialogs</li>
+	<li>Fixed lost icons on images (bug 353126) (Juan Pablo Ugarte)</li>
+	<li>Namespace issues with libglade initial fix (Juan Pablo Ugarte)</li>
+	<li>Few more misc fixes by Juan Pablo and myself.</li>
+
+
+
+      </ul>
+
+      <p>
+      </p>
+      </td>
+    </tr>
+
+    <tr>
+      <td></td>
       <td style="vertical-align: top;"><b>Aug 20 2006</b></td>
       <td></td>
       <td><b>Glade 3.0.1 </b><b> released !</b><b><br />
