@@ -1,3 +1,7 @@
+2006-09-29  Tristan Van Berkom  <tvb@gnome.org>
+
+	* index.html: Updated with new Glade 3.0.2 release.
+
 2006-08-20  Juan Pablo Ugarte <juanpablougarte@gmail.com>
 
 	* index.html: Updated with new Glade 3.0.1 release.
